--- a/css/style.css
+++ b/css/style.css
@@ -11,18 +11,24 @@ body{
 header{
     height: 60px;
     background-color: white;
-}
+    line-height: 50px;  
+    font-size: 30px;
+    font-weight: 900;
+    vertical-align: bottom ;
+}  
+
 header img{
     margin-top: 5px;
 }
 
-#titolo{
-    font-family: 'Roboto', sans-serif;
+ header #title{   
     font-size: 30px;
-    
-    line-height: 57px;
-    margin-top: px;
-}
+    font-weight: 900;
+    line-height: 100%;
+    height: 100%;
+    display: inline-block;
+    vertical-align: middle;    
+} 
 
 main{
     width: 70%;
@@ -39,7 +45,7 @@ section.container{
     margin: 0 auto;
 }
 
-.linea{
+.line{
     height: 2px;
     background-color: whitesmoke;
 }
@@ -63,4 +69,25 @@ button{
     background-color: white;
     color: lightgrey;
 }
+
+div.list{
+    margin: 20px 0px;
+}
+
+div.list-name{
+    display: inline-block;
+    font-weight: 900;
+}
+
+.triangle{
+    display: inline-block;
+    width: 0;
+    height: 0;
+    border-style: solid;
+    border-width: 7px 7px 0 7px;
+    border-color: black transparent transparent transparent;
+    margin-right: 5px;
+}
+
+
 
