--- a/css/style.css
+++ b/css/style.css
@@ -31,19 +31,21 @@ header img{
 } 
 
 main{
-    width: 70%;
+    width: 60%;
     background-color: white;
     height: 100%;
     margin: 0 auto;
     margin-top: 40px;
     margin-bottom: 20px;
     border-radius: 7px;
+    padding-bottom: 50px;
 }
 
 section.container{
     width: 80%;
     margin: 0 auto;
     padding: 10px;
+    
 }
 
 .line{
