--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+/* settaggi preliminari */
 *{
     margin: 0;
     padding: 0;
@@ -8,6 +9,7 @@
 body{
     background-color: whitesmoke;
 }
+/*********HEADER**********/
 header{
     height: 60px;
     background-color: white;
@@ -21,7 +23,8 @@ header img{
     margin-top: 5px;
 }
 
- header #title{   
+/* il nome del sitonon si centra da solo */
+ header #sitename{   
     font-size: 30px;
     font-weight: 900;
     line-height: 100%;
@@ -29,7 +32,7 @@ header img{
     display: inline-block;
     vertical-align: middle;    
 } 
-
+/*************MAIN*************/
 main{
     width: 60%;
     background-color: white;
@@ -47,12 +50,12 @@ section.container{
     padding: 10px;
     
 }
-
+/* la simpatica linietta */
 .line{
     height: 2px;
     background-color: whitesmoke;
 }
-
+/* i bottoni del menu' */
 button.menu{
     padding: 8px 12px;
     border: 0px;
@@ -72,7 +75,7 @@ button.menu{
     background-color: white;
     color: lightgrey;
 }
-
+/* la lista contiene titolo ed elementi */
 div.list{
     margin-top: 20px ;
 }
@@ -86,6 +89,7 @@ div.element{
     margin-top: 20px;
 }
 
+/* perchè le cose facili non ci piacciono */
 .triangle{
     display: inline-block;
     width: 0;
@@ -96,6 +100,7 @@ div.element{
     margin-right: 5px;
 }
 
+/* ma proprio per niente */
 div.circle{
     display: inline-block;    
     width: 20px;
@@ -116,6 +121,7 @@ div.uncheck{
     color: rgb(228, 59, 29);    
 }
 
+/* i tag a lato degli elementi */
 span.tag{
     box-sizing: border-box;
     padding: 8px 12px;
